<resources>
    <string name="app_name">Calculator2</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">C</string>
    <string name="clearEntry">CE</string>
    <string name="backspace">DEL</string>

    <string name="percent">%</string>
    <string name="divide">&#xf7;</string>
    <string name="multiply">&#xd7;</string>
    <string name="add">&#x2b;</string>
    <string name="subtract">&#x2212;</string>
    <string name="plusMinus">&#xb1;</string>
    <string name="point">.</string>
    <string name="equals">&#x3d;</string>
    <string name="reverse">1/x</string>
    <string name="square">x^2</string>
    <string name="squareRoot">&#x221A;</string>

    <string name="defaultExpressionValue"></string>
    <string name="defaultInputValue">0</string>
</resources>