<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputline2"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/percentBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:text="@string/percent"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/clearBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/clearEntryBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="clearEntryBTN"
                android:text="@string/clearEntry"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/backspaceBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="backspaceBTN"
                android:text="@string/backspace"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/reverseBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:text="@string/reverse"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/squareBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:text="@string/square"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/squareRootBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:text="@string/squareRoot"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="#000000"
                app:cornerRadius="2dp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="plusMinusBTN"
                android:text="@string/plusMinus"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/pointBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textColor="@android:color/black"
                app:cornerRadius="2dp" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/Theme.AppCompat.NoActionBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="0dp"
                android:layout_weight="1"
                android:backgroundTint="#009688"
                android:insetLeft="2dp"
                android:insetTop="2dp"
                android:insetRight="2dp"
                android:insetBottom="3dp"
                android:onClick="equalsBTN"
                android:text="@string/equals"
                android:textColor="@color/white"
                app:cornerRadius="2dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/inputline2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="false"
        android:inputType="none"
        android:minWidth="48dp"
        android:text="@string/defaultLine2"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputline1" />

    <TextView
        android:id="@+id/inputline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="false"
        android:inputType="none"
        android:minWidth="48dp"
        android:text="@string/defaultLine1"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="#8A8A8A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>